deploy: 2a973a17efc6ebde9bca7ecfbfc3b0c892ece53a

--- a/ssr-manifest.json
+++ b/ssr-manifest.json
@@ -27,23 +27,27 @@
     "/2021/assets/vendor.8e3c9bbf.js"
   ],
   "@vite-icons/akar-icons/calendar": [
-    "/2021/assets/Landing.f5c50d1b.js",
+    "/2021/assets/Landing.76c7bbd5.js",
     "/2021/assets/Landing.129a80a8.css"
   ],
   "@vite-icons/akar-icons/location": [
-    "/2021/assets/Landing.f5c50d1b.js",
+    "/2021/assets/Landing.76c7bbd5.js",
     "/2021/assets/Landing.129a80a8.css"
   ],
   "/home/runner/work/2021/2021/src/assets/scss/pages/landing.scss": [
-    "/2021/assets/Landing.f5c50d1b.js",
+    "/2021/assets/Landing.76c7bbd5.js",
     "/2021/assets/Landing.129a80a8.css"
   ],
   "/home/runner/work/2021/2021/src/pages/Landing.vue?vue&type=script&lang.ts": [
-    "/2021/assets/Landing.f5c50d1b.js",
+    "/2021/assets/Landing.76c7bbd5.js",
+    "/2021/assets/Landing.129a80a8.css"
+  ],
+  "/home/runner/work/2021/2021/src/assets/images/banner.svg": [
+    "/2021/assets/Landing.76c7bbd5.js",
     "/2021/assets/Landing.129a80a8.css"
   ],
   "/home/runner/work/2021/2021/src/pages/Landing.vue": [
-    "/2021/assets/Landing.f5c50d1b.js",
+    "/2021/assets/Landing.76c7bbd5.js",
     "/2021/assets/Landing.129a80a8.css"
   ],
   "/home/runner/work/2021/2021/src/assets/json/session.json": [
